# embedlab

./: .gitignore  README.md  board.cpp  board.hpp  critical_section.cpp  main.cpp  main.lua  meson.build  sdcard_blockdev.cpp  sdcard_blockdev.hpp  stdlib.cpp  stdout.cpp  stdout.hpp  syscalls.cpp  sysheap.cpp  sysheap.hpp
.github/workflows/: build.yml
freertos_config/: FreeRTOSConfig.h
osal/: critical_section.hpp
stdlib/: mutex
subprojects/: evfs.wrap  lua.wrap
subprojects/packagefiles/: lua-arm-embedded.patch
toolchain/: stm32f7.txt
